[gd_scene load_steps=5 format=2]

[ext_resource path="res://common/modifiers/modifier.tscn" type="PackedScene" id=1]
[ext_resource path="res://entities/characters/nom_nom/skills/scrilspeokr/family/family.gd" type="Script" id=2]
[ext_resource path="res://entities/characters/nom_nom/skills/scrilspeokr/scrilspeokr_icon.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 189.003

[node name="Family" instance=ExtResource( 1 )]
script = ExtResource( 2 )
buff_name = "Family"
buff_icon = ExtResource( 3 )
buff_description = "Family Bond!"
duration = 10.0

[node name="Area2D" type="Area2D" parent="." index="1"]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]
shape = SubResource( 1 )

[node name="AttackIntervalTimer" type="Timer" parent="." index="2"]
wait_time = 2.0

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="AttackIntervalTimer" to="." method="_on_AttackIntervalTimer_timeout"]
